// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextJsProxyCodemod should correctly transform configAfterDefaultExport.ts: configAfterDefaultExport.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
import type { NextRequest } from 'next/server'

export const config = {
    matcher: [
        '/((?!api|_next/static|_next/image|favicon.ico).*)',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export const proxy = withCroct({
    matcher: config.matcher,

    next: function(request: NextRequest) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configAfterNamedExport.ts: configAfterNamedExport.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
import type { NextRequest } from 'next/server'

export const config = {
    matcher: [
        '/((?!api|_next/static|_next/image|favicon.ico).*)',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export default withCroct({
    matcher: config.matcher,

    next: function proxy(request: NextRequest) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configAfterProxyWithReference.ts: configAfterProxyWithReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
import type { NextRequest } from 'next/server'

// pattern
const PATTERN = '/((?!api|_next/static|_next/image|favicon.ico).*)';

// matcher
class Matcher {
    static readonly PATTERN = PATTERN;
}

// getMatcher
function getMatcher() {
    return Matcher.PATTERN;
}

// currentMatcher
const currentMatcher = getMatcher();

// currentConfig
const currentConfig = {
    matcher: [
        ...(Array.isArray(currentMatcher) ? currentMatcher : [currentMatcher]),
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export const proxy = withCroct({
    matcher: currentConfig.matcher,

    next: function(request: NextRequest) {
        console.log(request.url);
    }
});

function unrelated() {
}

// Non-global scope
{
    // Different scope, should not be considered
    const PATTERN = null;

    function getMatcher() {
    }

    class Matcher {
    }
}

// config
export const config = currentConfig;
"
`;

exports[`NextJsProxyCodemod should correctly transform configInvalidReference.ts: configInvalidReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
import type { NextRequest } from 'next/server'

export default withCroct(function proxy(request: NextRequest) {
    console.log(request.url);
});

export const config = bar;
"
`;

exports[`NextJsProxyCodemod should correctly transform configWithArrayMatcher.ts: configWithArrayMatcher.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
import type { NextRequest } from 'next/server'

export const config = {
    matcher: [
        '/((?!api|_next/static|_next/image|favicon.ico).*)',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export const proxy = withCroct({
    matcher: config.matcher,

    next: function(request: NextRequest) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configWithIndirectVariableReference.ts: configWithIndirectVariableReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
const regex = '/((?!api|_next/static|_next/image|favicon.ico).*)';

const configValue = {
    matcher: [
        ...(Array.isArray(regex) ? regex : [regex]),
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

const indirectReference = configValue;
export const config = indirectReference;

export const proxy = withCroct({
    matcher: configValue.matcher,

    next: function(request) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configWithStringMatcher.ts: configWithStringMatcher.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
    matcher: [
        '/((?!api|_next/static|_next/image|favicon.ico).*)',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export const proxy = withCroct({
    matcher: config.matcher,

    next: function(request) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configWithVariableMatcher.ts: configWithVariableMatcher.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
const regex = '/((?!api|_next/static|_next/image|favicon.ico).*)';

export const config = {
    matcher: [
        ...(Array.isArray(regex) ? regex : [regex]),
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export const proxy = withCroct({
    matcher: config.matcher,

    next: function(request) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configWithVariableReference.ts: configWithVariableReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
const regex = '/((?!api|_next/static|_next/image|favicon.ico).*)';

const configValue = {
    matcher: [
        ...(Array.isArray(regex) ? regex : [regex]),
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export const config = configValue;

export const proxy = withCroct({
    matcher: configValue.matcher,

    next: function(request) {
        console.log(request.url);
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform configWithoutMatcher.ts: configWithoutMatcher.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
}

export const proxy = withCroct(function(request) {
    console.log(request.url);
});
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportAnonymousFunction.ts: defaultExportAnonymousFunction.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export default withCroct(function() {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportArrowFunction.ts: defaultExportArrowFunction.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export default withCroct(() => {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportArrowFunctionReference.ts: defaultExportArrowFunctionReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
const anything = withCroct((request) => console.log(request.url));
export default anything;
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportArrowFunctionWithBodyReference.ts: defaultExportArrowFunctionWithBodyReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

const anything = withCroct((request) => {
    console.log(request.url);
})

export default anything;
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportClass.ts: defaultExportClass.ts 1`] = `
"export default class Proxy {
    // invalid
}

export { proxy } from "@croct/plug-next/proxy";

export const config = {
    matcher: "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
};
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportFunctionDeclaration.ts: defaultExportFunctionDeclaration.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export default withCroct(function anything(request) {
    console.log(request.url);
});
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportFunctionDeclarationReference.ts: defaultExportFunctionDeclarationReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

const anything = withCroct(function(request) {
    console.log(request.url);
});

export default anything;
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportFunctionExpressionReference.ts: defaultExportFunctionExpressionReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

const anything = withCroct(function (request) {
    console.log(request.url);
})

export default anything;
"
`;

exports[`NextJsProxyCodemod should correctly transform defaultExportIndirectReference.ts: defaultExportIndirectReference.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

const anything = function (request) {
    console.log(request.url);
}

const something = withCroct(anything);
export default something;
"
`;

exports[`NextJsProxyCodemod should correctly transform empty.ts: empty.ts 1`] = `
"export { proxy } from "@croct/plug-next/proxy";

export const config = {
  matcher: "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
};"
`;

exports[`NextJsProxyCodemod should correctly transform existingAliasedHofCall.ts: existingAliasedHofCall.ts 1`] = `
"import { withCroct as croctProxy } from "@croct/plug-next/proxy";

export default croctProxy(function () {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingAliasedProxyCall.ts: existingAliasedProxyCall.ts 1`] = `
"import { proxy } from "@croct/plug-next/proxy";

export default proxy(function () {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingConfig.ts: existingConfig.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
    matcher: [
        '/((?!api|_next/static|_next/image|favicon.ico).*)',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ],
}

export default withCroct({
    matcher: config.matcher
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingConfigArrayMatcher.ts: existingConfigArrayMatcher.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
    matcher: ['/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)'],
}

export default withCroct({
    matcher: config.matcher
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingConfigMatcher.ts: existingConfigMatcher.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
    matcher: '/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)',
}

export default withCroct({
    matcher: config.matcher
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingHofCall.ts: existingHofCall.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export default withCroct(function () {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingImport.ts: existingImport.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
    matcher: [
        '.*',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ]
};

export const proxy = withCroct({
    matcher: config.matcher,

    next: function() {
        console.log('proxy');
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingImportAliased.ts: existingImportAliased.ts 1`] = `
"import { withCroct as croctProxy } from "@croct/plug-next/proxy";

export const config = {
    matcher: [
        '.*',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ]
};

export const proxy = croctProxy({
    matcher: config.matcher,

    next: function() {
        console.log('proxy');
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingProxyCall.ts: existingProxyCall.ts 1`] = `
"import { proxy as croctProxy } from "@croct/plug-next/proxy";

export default croctProxy(function () {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform existingProxyReexport.ts: existingProxyReexport.ts 1`] = `
"export { proxy } from "@croct/plug-next/proxy";

export const config = {
  matcher: "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
};
"
`;

exports[`NextJsProxyCodemod should correctly transform matcherAlias.ts: matcherAlias.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const config = {
    matcher: [
        '.*',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ]
};

export const proxy = withCroct({
    matcher: config.matcher,

    next: function() {
        console.log('proxy');
    }
});
"
`;

exports[`NextJsProxyCodemod should correctly transform namedExportArrowFunction.ts: namedExportArrowFunction.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";
export const proxy = withCroct(() => console.log('proxy'));
"
`;

exports[`NextJsProxyCodemod should correctly transform namedExportArrowFunctionWithBody.ts: namedExportArrowFunctionWithBody.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const proxy = withCroct(() => {
    console.log('proxy');
})
"
`;

exports[`NextJsProxyCodemod should correctly transform namedExportFunctionDeclaration.ts: namedExportFunctionDeclaration.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const proxy = withCroct(function() {
    console.log('proxy');
});
"
`;

exports[`NextJsProxyCodemod should correctly transform namedExportFunctionExpression.ts: namedExportFunctionExpression.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export const proxy = withCroct(function() {
    console.log('proxy');
})
"
`;

exports[`NextJsProxyCodemod should correctly transform namedSpecifiedExport.ts: namedSpecifiedExport.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

const config = {
    matcher: [
        '.*',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ]
};

const proxy = withCroct({
    matcher: config.matcher,

    next: function() {
        console.log('proxy');
    }
})

export { proxy, config };
"
`;

exports[`NextJsProxyCodemod should correctly transform specifiedExportWithAliases.ts: specifiedExportWithAliases.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

function unrelated() {
}

const _config = {
    matcher: [
        '.*',
        "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)"
    ]
};

const _proxyFn = withCroct({
    matcher: _config.matcher,

    next: function() {
        console.log('proxy');
    }
})

export {
    _proxyFn as default,
    _config as config
};
"
`;

exports[`NextJsProxyCodemod should correctly transform unrelatedExports.ts: unrelatedExports.ts 1`] = `
"import { withCroct } from "@croct/plug-next/proxy";

export function foo() {
}

export default withCroct(() => {

});

export function proxy() {
}
"
`;
